--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,4 @@ gradle-app.setting
 !**/packages/**/build/
 **/bin/
 
-# Ignore submodules. From Git's perspective at the base directory, these are all untracked files
-io
-math
-network
-os
+/dependency-reduced-pom.xml
