--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>io.github.incplusplus</groupId>
     <artifactId>bigtoolbox</artifactId>
     <version>1.0.95</version>
-    <packaging>pom</packaging>
+<!--    <packaging>pom</packaging>-->
     <name>Big Tool Box</name>
     <description>A collection of tools for varying purposes.
     This is the aggregator POM that includes all of the modules of bigtoolbox</description>
@@ -21,6 +21,10 @@
         <bintray.subject>incplusplus</bintray.subject>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <GH_REGISTRY_TOKEN>${env.GH_REGISTRY_TOKEN}</GH_REGISTRY_TOKEN>
+        <bigtoolbox.io.version>1.0.95</bigtoolbox.io.version>
+        <bigtoolbox.math.version>1.0.95</bigtoolbox.math.version>
+        <bigtoolbox.network.version>1.0.95</bigtoolbox.network.version>
+        <bigtoolbox.os.version>1.0.95</bigtoolbox.os.version>
     </properties>
 
     <licenses>
@@ -52,57 +56,76 @@
         </repository>
     </distributionManagement>
 
-    <modules>
-        <module>io</module>
-        <module>math</module>
-        <module>os</module>
-        <module>network</module>
-    </modules>
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>
+                    false
+                </enabled>
+            </snapshots>
+            <id>
+                bintray-incplusplus-main-maven
+            </id>
+            <name>
+                bintray
+            </name>
+            <url>
+                https://dl.bintray.com/incplusplus/main-maven
+            </url>
+        </repository>
+    </repositories>
+
+<!--    <modules>-->
+<!--        <module>io</module>-->
+<!--        <module>math</module>-->
+<!--        <module>os</module>-->
+<!--        <module>network</module>-->
+<!--    </modules>-->
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.1.1</version>
+                <!-- workaround for https://bugs.openjdk.java.net/browse/JDK-8212233 -->
+                <configuration>
+                    <!--                    <source>8</source>-->
+                    <!-- The below specified attribute 'attach' will disable the javadoc.jar not included in the artifact list -->
+<!--                    <attach>false</attach>-->
+                    <finalName>${project.artifactId}-${project.version}</finalName>
+<!--                    <includeDependencySources>true</includeDependencySources>-->
+                    <jarOutputDirectory>${project.build.directory}</jarOutputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>aggregate-javadocs</id>
+                        <goals>
+                            <goal>aggregate-jar</goal>
+                        </goals>
+                        <configuration>
+                            <includeDependencySources>true</includeDependencySources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 <!--            <plugin>-->
 <!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
-<!--                <version>3.1.1</version>-->
-<!--                &lt;!&ndash; workaround for https://bugs.openjdk.java.net/browse/JDK-8212233 &ndash;&gt;-->
-<!--                <configuration>-->
-<!--                    &lt;!&ndash;                    <source>8</source>&ndash;&gt;-->
-<!--                    &lt;!&ndash; The below specified attribute 'attach' will disable the javadoc.jar not included in the artifact list &ndash;&gt;-->
-<!--                    <attach>false</attach>-->
-<!--                    <finalName>${project.artifactId}-${project.version}</finalName>-->
-<!--&lt;!&ndash;                    <includeDependencySources>true</includeDependencySources>&ndash;&gt;-->
-<!--                    <jarOutputDirectory>${project.basedir}/target</jarOutputDirectory>-->
-<!--                </configuration>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>aggregate-javadocs</id>-->
-<!--                        <goals>-->
-<!--                            <goal>aggregate-jar</goal>-->
-<!--                        </goals>-->
-<!--&lt;!&ndash;                        <configuration>&ndash;&gt;-->
-<!--&lt;!&ndash;                            <includeDependencySources>true</includeDependencySources>&ndash;&gt;-->
-<!--&lt;!&ndash;                        </configuration>&ndash;&gt;-->
-<!--                    </execution>-->
-<!--                    <execution>-->
-<!--                        <id>attach-javadocs</id>-->
-<!--                        <phase>package</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>jar</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
+<!--                <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                <version>2.22.0</version>-->
 <!--            </plugin>-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.0</version>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-failsafe-plugin</artifactId>-->
+<!--                <version>2.22.0</version>-->
+<!--            </plugin>-->
 <!--            <plugin>-->
 <!--                <groupId>org.apache.maven.plugins</groupId>-->
 <!--                <artifactId>maven-install-plugin</artifactId>-->
@@ -154,33 +177,52 @@
 <!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
-                <configuration>
-                    <!-- The below specified attribute 'attach' will disable the sources.jar not included in the artifact list -->
-                    <attach>false</attach>
-                </configuration>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                    <execution>
                         <phase>package</phase>
-                        <id>generate-sources</id>
                         <goals>
-                            <goal>aggregate</goal>
+                            <goal>shade</goal>
                         </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                            <finalName>${project.artifactId}-${project.version}</finalName>
+                            <shadedArtifactAttached>false</shadedArtifactAttached>
+                            <createSourcesJar>true</createSourcesJar>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-source-plugin</artifactId>-->
+<!--                <version>3.0.1</version>-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash; The below specified attribute 'attach' will disable the sources.jar not included in the artifact list &ndash;&gt;-->
+<!--                    <attach>false</attach>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>attach-sources</id>-->
+<!--                        <goals>-->
+<!--                            <goal>jar</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <phase>package</phase>-->
+<!--                        <id>generate-sources</id>-->
+<!--                        <goals>-->
+<!--                            <goal>aggregate</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <version>3.8.0</version>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
@@ -203,4 +245,26 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>io.github.incplusplus</groupId>
+            <artifactId>bigtoolbox-io</artifactId>
+            <version>${bigtoolbox.io.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.incplusplus</groupId>
+            <artifactId>bigtoolbox-math</artifactId>
+            <version>${bigtoolbox.math.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.incplusplus</groupId>
+            <artifactId>bigtoolbox-network</artifactId>
+            <version>${bigtoolbox.network.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.incplusplus</groupId>
+            <artifactId>bigtoolbox-os</artifactId>
+            <version>${bigtoolbox.os.version}</version>
+        </dependency>
+    </dependencies>
 </project>
